--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.2.1"
   }
